# planet-wars-haskell

./: .gitignore  mkSubmit-v.sh  mkSubmit.sh  planet-wars-haskell.cabal  run-tcp.sh  run.sh
mybots/: AzBot.hs
v-olathe/: MyBot.hs  PlanetWars.hs  StringLike.hs
v-olathe/example_bots/: BullyBot.hs  PlanetWars.hs  ProspectorBot.hs  RageBot.hs  RandomBot.hs  StringLike.hs
v-olathe/mybots/: AzBot.hs  MyBot.hs
visualise/: Main.hs  Vis.hs
