name: planet-wars-haskell
version: 0.0.0.1
description: Unofficial Haskell starter package for the Google AI contest.
license: OtherLicense
license-file: LICENSE

build-type: Simple
Cabal-Version: >= 1.2

Executable AzBot
        hs-source-dirs: ./v-olathe, ./v-olathe/mybots
        main-is: AzBot.hs
        build-depends: base ==4.*
                     , containers ==0.3.*
                     , bytestring
                     , array

Executable MyBot
        hs-source-dirs: ./v-olathe, ./v-olathe/mybots
        main-is: MyBot.hs
        build-depends: base ==4.*
                     , containers ==0.3.*
                     , bytestring
                     , array

